VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_13TeV-powheg-pythia8.err
[8MB/227.6MB][  3%][=>                                                ][1.333MB/s]  [16MB/227.6MB][  7%][===>                                              ][1.6MB/s]  [24MB/227.6MB][ 10%][=====>                                            ][1.333MB/s]  [32MB/227.6MB][ 14%][=======>                                          ][1.231MB/s]  [40MB/227.6MB][ 17%][========>                                         ][1.29MB/s]  [48MB/227.6MB][ 21%][==========>                                       ][1.412MB/s]  [56MB/227.6MB][ 24%][============>                                     ][1.514MB/s]  [64MB/227.6MB][ 28%][==============>                                   ][1.561MB/s]  [72MB/227.6MB][ 31%][===============>                                  ][1.6MB/s]  [80MB/227.6MB][ 35%][=================>                                ][1.633MB/s]  [88MB/227.6MB][ 38%][===================>                              ][1.63MB/s]  [96MB/227.6MB][ 42%][=====================>                            ][1.627MB/s]  [104MB/227.6MB][ 45%][======================>                           ][1.625MB/s]  [112MB/227.6MB][ 49%][========================>                         ][1.623MB/s]  [120MB/227.6MB][ 52%][==========================>                       ][1.622MB/s]  [128MB/227.6MB][ 56%][============================>                     ][1.62MB/s]  [136MB/227.6MB][ 59%][=============================>                    ][1.639MB/s]  [144MB/227.6MB][ 63%][===============================>                  ][1.618MB/s]  [152MB/227.6MB][ 66%][=================================>                ][1.583MB/s]  [160MB/227.6MB][ 70%][===================================>              ][1.553MB/s]  [168MB/227.6MB][ 73%][====================================>             ][1.514MB/s]  [176MB/227.6MB][ 77%][======================================>           ][1.479MB/s]  [184MB/227.6MB][ 80%][========================================>         ][1.449MB/s]  [192MB/227.6MB][ 84%][==========================================>       ][1.466MB/s]  [200MB/227.6MB][ 87%][===========================================>      ][1.481MB/s]  [208MB/227.6MB][ 91%][=============================================>    ][1.486MB/s]  [216MB/227.6MB][ 94%][===============================================>  ][1.479MB/s]  [224MB/227.6MB][ 98%][=================================================>][1.493MB/s]  [227.6MB/227.6MB][100%][==================================================][1.498MB/s]  [227.6MB/227.6MB][100%][==================================================][1.498MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_38905/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_38905/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
